# LTL_RL

./: action.txt  env.py  env_current.py  ltlfilt  my.ltl  nohup.out  stats.txt  test.txt  utils.py
.ipynb_checkpoints/: FullProd-checkpoint.ipynb
DDQN/: Deep Q Learning Solution.ipynb  env_current.py  not_tunned_ddqn.ipynb  qnetwork.py  stats.txt  utils.py
DDQN/.ipynb_checkpoints/: DDQN-Cartpole-checkpoint.ipynb  DDQN-checkpoint.ipynb  Deep Q Learning Solution-checkpoint.ipynb
DDQN/cartpole/: stats.txt
DDQN/saved_model/: ddqn.ckpt.data-00000-of-00001  ddqn.ckpt.index
Dynamic_LTL_RL/: DYN_DDQN_LTL_VM.ipynb  action.txt  env.py  env_large.py  my.dot  nohup.out  qnetwork.py  stats.txt  utils.py~  vm_main.py  vm_main.py~
Dynamic_LTL_RL/larger_world/: Plot_Path.py  action.txt  env.py  env.py~  my.ltl  nohup.out  stats.txt  utils.py  vm_main.py  vm_main.py~
LTL_RL/: DDQN_LTL_VM.ipynb  Plot_Path.py  README.md  action.txt  env.py  env.py~  old_ddqn_vm.ipynb  stats.txt  vm_main.py  vm_main.py~
LTL_RL/ltl2dstar-0.5.3/: my.ltl  test.ipynb
LTL_RL/ltl2dstar-0.5.3/src/: APMonom2APElements.hpp  APSet.hpp  CMakeLists.txt  Configuration.hpp  DA.hpp  DA_State.hpp  DBA2DRA.hpp  DRA2NBA.hpp  GraphAlgorithms.hpp  LTL2DRA.hpp  LTL2NBA.hpp  LTLFormula.hpp  Makefile  NBA.hpp  NBA2DA.hpp  NBA2DRA.hpp  NBAAnalysis.hpp  NBA_I.hpp  SafraTreeTemplate.hpp  SafrasAlgorithm.hpp  ltl2dstar
LTL_RL/ltl2dstar-0.5.3/src/common/: Exceptions.hpp  RunProgram.hpp  RunProgram.win32.cpp  SimpleBitSet.hpp  fdstream.hpp  hash_map.hpp  nested_iterator.hpp
LTL_RL/ltl2dstar-0.5.3/src/parsers/: nba-parser-lbtt.lpp  nba-parser-lbtt.tab.cpp  nba-parser-lbtt.ypp  nba-parser-promela.lpp
LTL_RL/ltl2dstar-0.5.3/src/plugins/: SamplePlugin.cpp
LTL_RL/maxstep_5000/: #env.py#  my.ltl  nohup.out  stats.txt  vm_main.py
ltl2dstar-0.5.3/: FGa.dot  FGa_detailed.dot  NEWS  README  my.dot
ltl2dstar-0.5.3/.ipynb_checkpoints/: test-checkpoint.ipynb
ltl2dstar-0.5.3/doc/: ltl2dstar.html
ltl2dstar-0.5.3/src/: APElement.hpp  APMonom.cpp  APMonom.hpp  DAUnionAlgorithm.hpp  DRA.hpp  DRAOptimizations.hpp  EdgeContainerExplicit_APElement.hpp  (+18 more)
maxstep_1500/: DDQN_LTL_VM3.ipynb  action.txt  ltl2dstar  my.dot  stats.txt
maxstep_5000/: action.txt  ltl2ba  my.dot  qnetwork.py  utils.py  vm_main.py~
(+195 files in other folders)
